[package]
name = "vil_cli"
version = "0.1.0"
edition = "2021"
description = "VIL CLI - Vastar Intermediate Language zero-copy streaming pipelines for Rust"

[dependencies]
vil_rt = { path = "../vil_rt" }
vil_shm = { path = "../vil_shm" }
vil_registry = { path = "../vil_registry" }
vil_types = { path = "../vil_types" }
vil_net = { path = "../vil_net" }
vil_sdk = { path = "../vil_sdk" }
vil_obs = { path = "../vil_obs" }
vil_viz = { path = "../vil_viz" }

clap = { version = "4.4", features = ["derive"] }
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
dirs = "5.0"
rand = "0.8"
regex = "1"

[[bin]]
name = "vil"
path = "src/main.rs"
