[package]
name = "vil_cli"
version = "0.1.12"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VIL CLI - Vastar Intermediate Language zero-copy streaming pipelines for Rust"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"
readme = "README.md"

[dependencies]
vil_rt = { version = "0.1.0", path = "../vil_rt" }
vil_shm = { version = "0.1.0", path = "../vil_shm" }
vil_registry = { version = "0.1.0", path = "../vil_registry" }
vil_types = { version = "0.1.0", path = "../vil_types" }
vil_net = { version = "0.1.0", path = "../vil_net" }
vil_sdk = { version = "0.1.0", path = "../vil_sdk" }
vil_obs = { version = "0.1.0", path = "../vil_obs" }
vil_viz = { version = "0.1.2", path = "../vil_viz" }

clap = { version = "4.4", features = ["derive"] }
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
dirs = "5.0"
rand = "0.8"
regex = "1"

[[bin]]
name = "vil"
path = "src/main.rs"
