[package]
name = "vil_cli_compile"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VIL CLI Compile — transpile SDK, codegen, VLB builder"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"

[dependencies]
vil_cli_core = { version = "0.2", path = "../vil_cli_core" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0"
regex = "1"
vil_rt = { version = "0.2", path = "../vil_rt" }
vil_types = { version = "0.2", path = "../vil_types" }
vil_shm = { version = "0.2", path = "../vil_shm" }
anyhow = "1.0"
