[package]
name = "vil_cli_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VIL CLI Core — shared config, templates, project init, error catalog"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "5.0"
rand = "0.8"
regex = "1"
anyhow = "1.0"
