[package]
name = "vil_cli_server"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VIL CLI Server — init, dev, gen, deploy for VilApp backends"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"

[dependencies]
vil_cli_core = { version = "0.2", path = "../vil_cli_core" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.0"
notify = { version = "7", features = ["macos_kqueue"] }
dotenvy = "0.15"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
