[package]
name = "vil_codegen_c"
description = "VIL C-Header Generator (IDL Interop)"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
vil_types = { workspace = true }
vil_ir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
