[package]
name = "vil_codegen_rust"
description = "VIL code generation (stub — masa depan: IR → generated Rust)"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
vil_ir = { workspace = true }
vil_types = { workspace = true }
