[package]
name = "vil_consensus"
version = "0.1.0"
edition = "2021"
description = "VIL Multi-Model Consensus — parallel inference with voting/fusion"

[dependencies]
vil_llm          = { path = "../vil_llm" }
vil_macros       = { path = "../vil_macros" }
vil_server_core  = { path = "../vil_server_core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
vil_sdk = { path = "../vil_sdk" }
vil_server = { path = "../vil_server" }
axum = { version = "0.7", features = ["macros"] }
