[package]
name = "vil_consensus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "VIL Multi-Model Consensus — parallel inference with voting/fusion"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"
readme = "README.md"

[dependencies]
vil_llm          = { version = "0.1.0", path = "../vil_llm" }
vil_macros       = { version = "0.1.0", path = "../vil_macros" }
vil_server_core  = { version = "0.1.0", path = "../vil_server_core" }
vil_log = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
async-trait = "0.1"
vil_sdk = { version = "0.1.0", path = "../vil_sdk" }
vil_server = { version = "0.1.0", path = "../vil_server" }
axum = { version = "0.7", features = ["macros"] }
