[package]
name = "vil_context_optimizer"
version = "0.1.0"
edition = "2021"
description = "VIL Context Optimizer — fit 4-10x more context in LLM token budgets"

[dependencies]
vil_tokenizer    = { path = "../vil_tokenizer" }
vil_macros       = { path = "../vil_macros" }
vil_sdk          = { path = "../vil_sdk" }
vil_server_core  = { path = "../vil_server_core" }
vil_server       = { path = "../vil_server" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
