[package]
name = "vil_context_optimizer"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VIL Context Optimizer — fit 4-10x more context in LLM token budgets"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"
readme = "README.md"

[dependencies]
vil_tokenizer    = { version = "0.1.0", path = "../vil_tokenizer" }
vil_macros       = { version = "0.1.0", path = "../vil_macros" }
vil_sdk          = { version = "0.1.0", path = "../vil_sdk" }
vil_server_core  = { version = "0.1.0", path = "../vil_server_core" }
vil_server       = { version = "0.1.0", path = "../vil_server" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
