[package]
name = "vil_crawler"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VIL Web Crawler — async concurrent BFS crawling with robots.txt support (I01)"
repository = "https://github.com/OceanOS-id/VIL"
homepage = "https://vastar.id/products/vil"
documentation = "https://vastar.id/docs/vil"
readme = "README.md"

[dependencies]
vil_sdk          = { version = "0.4", path = "../vil_sdk" }
vil_server_core  = { version = "0.4", path = "../vil_server_core" }
vil_server       = { version = "0.4", path = "../vil_server" }
vil_macros       = { version = "0.4", path = "../vil_macros" }
vil_log = { workspace = true }
tracing = { workspace = true }
axum               = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
regex = "1"
async-trait = "0.1"
dashmap = "5.5"
