[package]
name = "vil_crypto"
description = "VIL Expression function — AES-GCM encryption/decryption"
repository = "https://github.com/AdeVastra/VIL"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
