[package]
name = "vil_data_prep"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "N01 — Fine-Tuning Data Pipeline: dedup, quality filter, multi-format output"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
tokio = { workspace = true }

vil_sdk = { version = "0.3", path = "../vil_sdk" }
vil_server_core = { version = "0.3", path = "../vil_server_core" }
vil_server = { version = "0.3", path = "../vil_server" }
vil_macros = { version = "0.3", path = "../vil_macros" }
axum = { version = "0.7", features = ["macros"] }
[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
