[package]
name = "vil_db_clickhouse"
description = "VIL Database Plugin — ClickHouse OLAP with batch INSERT and semantic logging"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vil_log = { workspace = true }
clickhouse = { version = "0.12", features = ["inserter"] }
tokio = { workspace = true }
serde = { workspace = true }
